WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130463
REGRESSION (OS X 10.9.2): PageVisibilityStateWithWindowChanges.WebKit2 API test fails
https://bugs.webkit.org/show_bug.cgi?id=130463
Summary
REGRESSION (OS X 10.9.2): PageVisibilityStateWithWindowChanges.WebKit2 API te...
Alexey Proskuryakov
Reported
2014-03-19 10:21:35 PDT
Since regression testing bots were upgraded to OS X 10.9.2 yesterday, PageVisibilityStateWithWindowChanges.WebKit2 started to time out:
http://build.webkit.org/builders/Apple%20Mavericks%20Debug%20WK1%20(Tests)/builds/3917/steps/run-api-tests/logs/stdio
Attachments
proposed fix
(2.53 KB, patch)
2015-05-22 12:08 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-03-19 10:27:59 PDT
Disabled the test in <
http://trac.webkit.org/r165899
>.
Alexey Proskuryakov
Comment 2
2015-04-07 20:43:21 PDT
See also:
rdar://problem/20461342
Alexey Proskuryakov
Comment 3
2015-05-22 12:08:57 PDT
Created
attachment 253598
[details]
proposed fix
WebKit Commit Bot
Comment 4
2015-05-22 17:27:06 PDT
Comment on
attachment 253598
[details]
proposed fix Clearing flags on attachment: 253598 Committed
r184807
: <
http://trac.webkit.org/changeset/184807
>
WebKit Commit Bot
Comment 5
2015-05-22 17:27:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug