REGRESSION (OS X 10.9.2): PageVisibilityStateWithWindowChanges.WebKit2 API test fails https://bugs.webkit.org/show_bug.cgi?id=130463 rdar://problem/20461342

Reviewed by Tim Horton.

This was more of a timing related flakiness than an actual OS version specific bug,
we weren't getting window visibility notifications.

I will look into adding this function call to DumpRenderTree separately, layout tests
might actually rely on the broken behavior.

* TestWebKitAPI/Tests/mac/PageVisibilityStateWithWindowChanges.mm:
(TestWebKitAPI::TEST_F):
* TestWebKitAPI/mac/mainMac.mm:
(main):


Canonical link: https://commits.webkit.org/163336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184807 268f45cc-cd09-0410-ab3c-d52691b4dbfc